# expresslrs-uid-lookup

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  fetch.sh
.github/: dependabot.yaml
.github/workflows/: ci.yaml
lists/: expresslrs.txt
server/: .gitignore  Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
