[workspace]
members = ["./server"]

[package]
name = "elrs-rainbow-table"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[package.metadata.cargo-machete]
ignored = ["md-5"]

[features]
time-lookup = []

[dependencies]
anyhow = "1.0.75"
md-5 = { version = "0.10.5", features = ["asm"] }
memchr = "2.5.0"
rayon = "1.7.0"
ureq = "2.7.1"

[profile.release]
lto = "thin"
strip = true
