[workspace]
members = ["./server"]

[package]
name = "elrs-uid-lookup"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[package.metadata.cargo-machete]
ignored = ["md-5"]

[features]
time-lookup = []

[dependencies]
anyhow = "1.0.86"
md-5 = { version = "0.10.5", features = ["asm"] }
memchr = "2.7.4"
rayon = "1.10.0"
ureq = "2.9.7"

[profile.release]
lto = "thin"
strip = true
