[package]
name = "elrs-uid-server"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["tokio"]

[dependencies]
axum = { version = "0.7.9", features = ["json"] }
elrs-uid-lookup = { path = ".." }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
serde_json = "1.0.134"
tokio = "1.42.0"
